# KWALLM

./: .gitignore  CHANGELOG_FILE_UPLOAD.md  Dockerfile  Dockerfile-app.R  README.md  app-llm-server.R  app-llm-server.bat  app.R  package-app.R  package-lock.json  package-main.js  package.json  pyproject.toml  tekstanalyse_met_llm.Rproj
.github/workflows/: build_container_with_release.yml  build_preview_container.yml  build_push_container.yml  cleanup_untagged_container.yml  cleanup_untagged_containers.yml  draft_release_with_desktop_app_build.yml  prepare_release.yml  (+3 more)
R/: analysis_deductive_categorization.R  analysis_deductive_scoring_characteristic.R  analysis_inductive_topic_modelling.R  analysis_marking.R  app-llm-kp-server.R  app_error.R  assign_multiple_categories_toggle.R  async_message_printer.R  context_window.R  datatable_config.R  edit_topics.R  gliner_anonymization.R  gliner_load.R  gliner_load_model.R  human_in_the_loop_toggle.R  interrater_reliability_toggle.R  llm_provider.R  main_ui_and_server.R  marking_codes.R  mode.R  model.R  processing.R  progress_bar.R  report_Categorisatie_en.Rmd  report_Categorisatie_nl.Rmd  report_Markeren_en.Rmd  report_Markeren_en.html  report_Markeren_nl.Rmd  report_Onderwerpextractie_en.Rmd  report_Onderwerpextractie_nl.Rmd  report_Scoren_en.Rmd  report_Scoren_nl.Rmd  report_datatable_config.R  report_quote_utils.R  research_background.R  semchunk_load.R  send_prompt_with_retries.R  style_prompt.R  text_management.R  text_split.R  (+4 more)
language/: language.json
scripts/: package-prebuild.js  package-setup-portable-r.js
(+22 files in other folders)
